syntax = 'proto3';

option go_package = "plugin/proto";

package NWNX4.RPC;

service ActionService {
  rpc CallAction(CallActionRequest) returns (CallActionResponse);
}

message Value {
  oneof valueType {
    bool bValue = 1;
    int32 nValue = 2;
    float fValue = 3;
    string sValue = 4;
    bytes gffValue = 5;
  }
}

message CallActionRequest {
  string actionPath = 1;
  map<string, Value> params = 2;
}

message CallActionResponse {
  map<string, Value> data = 1;
}
